Refactored model assemblies to align with Selling bounded context

--- a/Assets/Code/Model/Selling.Tests/Selling.Tests.asmdef
+++ b/Assets/Code/Model/Selling.Tests/Selling.Tests.asmdef
@@ -1,7 +1,11 @@
 {
-    "name": "Model",
-    "references": [],
-    "optionalUnityReferences": [],
+    "name": "Selling.Tests",
+    "references": [
+        "Selling"
+    ],
+    "optionalUnityReferences": [
+        "TestAssemblies"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
