--- a/Assets/Code/Model/Selling/Selling.asmdef
+++ b/Assets/Code/Model/Selling/Selling.asmdef
@@ -1,3 +1,14 @@
-﻿{
-	"name": "Selling"
+{
+    "name": "Selling",
+    "references": [
+        "UniRx"
+    ],
+    "optionalUnityReferences": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": []
 }
