Integrated Sell Button and Sales Panel with HotDogCart

--- a/Assets/Code/Infrastructure/Infrastructure.asmdef
+++ b/Assets/Code/Infrastructure/Infrastructure.asmdef
@@ -3,7 +3,8 @@
     "references": [
         "Presentation",
         "Selling",
-        "Zenject"
+        "Zenject",
+        "UniRx"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
