--- a/Assets/Code/Presentation/Presentation.asmdef
+++ b/Assets/Code/Presentation/Presentation.asmdef
@@ -2,7 +2,8 @@
     "name": "Presentation",
     "references": [
         "Selling",
-        "Zenject"
+        "Zenject",
+        "UniRx"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
