Split HotDogCartTimePump and HotDogCartCustomerGenerator into Integration assembly

--- a/Assets/Code/Integration/Integration.asmdef
+++ b/Assets/Code/Integration/Integration.asmdef
@@ -1,11 +1,9 @@
 {
-    "name": "Infrastructure",
+    "name": "Integration",
     "references": [
-        "Integration",
-        "Presentation",
         "Selling",
-        "Zenject",
-        "UniRx"
+        "UniRx",
+        "Zenject"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
