Created Customers aggregate, moved AddWaitingCustomer() out of HotDogCart, event dependency between HotDogCart and Customers

--- a/Assets/Code/Model/Selling.Tests/Selling.Tests.asmdef
+++ b/Assets/Code/Model/Selling.Tests/Selling.Tests.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "Selling.Tests",
     "references": [
-        "Selling"
+        "Selling",
+        "UniRx"
     ],
     "optionalUnityReferences": [
         "TestAssemblies"
